# open_codegen

./: .env  .env.example  .env.template  .gitignore  .gitmodules  ARCHITECTURE.md  CONTEXT_RETRIEVAL.md  DEPLOYMENT_VALIDATION_REPORT.md  Dockerfile  PRD.md  README-Enhanced.md  README.md  README_ENDPOINT_MANAGER.md  README_GATEWAY.md  README_UNIFIED_SYSTEM.md  README_UNIVERSAL_MANAGER.md  STARTUP_GUIDE.md  TESTING_COMPLETE_RESPONSES.md  WEBUI_README.md  Z_AI_SDK_INTEGRATION_SUMMARY.md  actual_ui.html  anthropic_call.py  api_system.py  bandit_report.json  client.py  codegen_integration.py  codegen_response_retriever.py  comprehensive_analysis_report.json  config.json  config.py  demo_webui.py  deploy.py  deploy_windows.bat  docker-compose.yml  endpoint_functionality_analysis.json  endpoint_manager.db  example_context_usage.py  final_analysis_report.py  final_comprehensive_report.json  final_review_gate.py  (+81 more)
.githooks/: post-checkout  post-merge
backend/: .env.example  __init__.py  api_manager.py  chat_handler.py  database.py  endpoint_manager.py  enhanced_server.py  main.py  requirements.txt  server.py  web_scraper.py  web_ui_integration.py
balancing/: load_balancer.py
config/: config_manager.py  default.yaml  service_providers.py
converters/: converter_factory.py
docs/: QUICK_START_GUIDE.md  SERVICE_PROVIDER_CONFIGURATION.md  WEB_UI_DASHBOARD.md  prompt_management.md  web_chat_integration.md
examples/: codegen_sdk_example.py  local_development_setup.py  openai_client_example.py
formats/: format_detector.py  universal_chat.py
frontend/: enhanced_index.html  index.html  package.json  tailwind.config.js
gateway/: api_gateway.py  startup.py
interceptor/: __init__.py  ubuntu_dns.py  ubuntu_ssl.py
openai_codegen_adapter/: README.md  __init__.py  anthropic_streaming.py  anthropic_transformer.py  app.py  client.py  codegen_client.py  codegen_client_enhanced.py  codegen_client_fixed.py  codegen_client_old.py  config.py  error_handler.py  gemini_streaming.py  gemini_transformer.py  health.py  main.py  metrics.py  middleware.py  models.py  models.py.backup  request_transformer.py  response_transformer.py  server.py  start_server.py  streaming.py  usage_example.py
providers/: base_provider.py  bing_provider.py  chatgpt_provider.py  codegen_provider.py  copilot_provider.py  grok_provider.py  k2_provider.py  provider_manager.py  qwen_provider.py  talkai_provider.py  zai_provider.py
scripts/: auto_populate_apis.py  configure_providers.py  setup_git_hooks.py  start_unified_system.py  uninstall-ubuntu.sh
src/: index.html
static/: index.html
(+206 files in other folders)
